Bug 86814 - FORMATTING: sometimes no bold style in RTF file
Summary: FORMATTING: sometimes no bold style in RTF file
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.beta1
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.0.0 target:4.4.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2014-11-28 08:20 UTC by Rostislav 'R.Yu.' Okulov
Modified: 2015-12-17 08:40 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
text cyrillic (896.77 KB, text/rtf)
2014-11-28 08:20 UTC, Rostislav 'R.Yu.' Okulov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rostislav 'R.Yu.' Okulov 2014-11-28 08:20:05 UTC
Created attachment 110158 [details]
text cyrillic

This is regression, I think.

In 4.3.x rtf loaded just fine but when I use LO 4.4 beta 1 it shows incorrectly.

File attached but it in cyrillic.

How to reproduce:

1. open file attached in LO 4.3
2. find question number 27 by query "27."
3. it is bold
4. open same file in LO 4.4 beta 1
5. find same point
6. not bold
Comment 1 Jacques Guilleron 2014-12-05 20:40:29 UTC
Hi R.Yu.,

I reproduce with LO 4.4.0.0.beta1
Build ID: 9af3d21234aa89dac653c0bd76648188cdeb683e
& Windows 7 Homr Premium
but not with LO 4.3.4.1
Build ID: bc356b2f991740509f321d70e4512a6a54c5f243
I set set Status to NEW and Keywords to regression.

Have a nice day,

Jacques
Comment 2 Rostislav 'R.Yu.' Okulov 2014-12-11 08:09:02 UTC
git bisect log
git bisect start                                                                                   
# good: [812c4a492375ac47b3557fbb32f5637fc89d60d9] source-hash-dea4a3b9d7182700abeb4dc756a24a9e8dea8474                      
git bisect good 812c4a492375ac47b3557fbb32f5637fc89d60d9                                                                     
# bad: [0777cd085a7633a48e03d25948cc67fce87b7ac7] source-hash-b800d0b6ad74ce4a9adb23b865dd174d1eefa47b                       
git bisect bad 0777cd085a7633a48e03d25948cc67fce87b7ac7                                                                      
# good: [8677ba6e74a774fb44ec7831f14e53d8663f59ed] source-hash-eb213e490d9a366477b921d1a408d85c4638499e                      
git bisect good 8677ba6e74a774fb44ec7831f14e53d8663f59ed                                                                     
# bad: [33e2222277083d3a30c0020aa4b05d54aeed6131] source-hash-34fe0d32505f64fdef20828c26547cc7f8453212                                     
git bisect bad 33e2222277083d3a30c0020aa4b05d54aeed6131                                                                                    
# bad: [2f5e5380e91db431d352b38c62670a538c3efd22] source-hash-3d394257945f6b0a4bc4b5ea397a3942a59c5d06                                      
git bisect bad 2f5e5380e91db431d352b38c62670a538c3efd22                                                                                       
# bad: [f912aa9816b7e747ce4d9ffd4fbe8199ca209882] source-hash-8cf6ba8a28f2c22817e94185121190f082c75754                                         
git bisect bad f912aa9816b7e747ce4d9ffd4fbe8199ca209882                                                                                        
# good: [c0ef5c9ad28738878bb28206d62a57aa367cad92] source-hash-d47678c990681d0cfc7f2c843bb9aedaeb08511a
git bisect good c0ef5c9ad28738878bb28206d62a57aa367cad92
# bad: [13dd70af8ba4601634381e59fba94ad4f2abbc2d] source-hash-047d2f953ada34ada593768766d3ea8a725f9442
git bisect bad 13dd70af8ba4601634381e59fba94ad4f2abbc2d
# bad: [82b4be3a5048758d13ce1637ca5a9972c0fa329a] source-hash-10143717834d8401d85fdf9564e782a58b9983ec
git bisect bad 82b4be3a5048758d13ce1637ca5a9972c0fa329a
# good: [c49931ff5ba6cd9e2ea7ec9d86a6014702861406] source-hash-99987e325b931fcceea2e587255a01a8ae571191
git bisect good c49931ff5ba6cd9e2ea7ec9d86a6014702861406
# first bad commit: [82b4be3a5048758d13ce1637ca5a9972c0fa329a] source-hash-10143717834d8401d85fdf9564e782a58b9983ec
Comment 3 Rostislav 'R.Yu.' Okulov 2014-12-11 08:09:27 UTC
 82b4be3a5048758d13ce1637ca5a9972c0fa329a is the first bad commit
commit 82b4be3a5048758d13ce1637ca5a9972c0fa329a
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Sun Oct 19 04:01:48 2014 +0000

    source-hash-10143717834d8401d85fdf9564e782a58b9983ec
    
    commit 10143717834d8401d85fdf9564e782a58b9983ec
    Author:     Matthew J. Francis <mjay.francis@gmail.com>
    AuthorDate: Wed Sep 3 17:36:55 2014 +0800
    Commit:     Norbert Thiebaud <nthiebaud@gmail.com>
    CommitDate: Sat Sep 6 15:31:55 2014 -0500
    
        Make OOO_EXIT_POST_STARTUP behave more nicely when blank
    
        Change-Id: I28bc8027908225d78c9543f3813d3bfe3818451d
        Reviewed-on: https://gerrit.libreoffice.org/11264
        Reviewed-by: Norbert Thiebaud <nthiebaud@gmail.com>
        Tested-by: Norbert Thiebaud <nthiebaud@gmail.com>
Comment 4 retired 2014-12-11 11:07:24 UTC
attachment mime type corrected to .rtf

Confirmed OSX 10.10.1, LO Version: 4.5.0.0.alpha0+
Build ID: 6e91763769a562b88882a4c2a94b1367c6ed4866
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2014-12-11_02:24:05
Locale: de_
Comment 5 Matthew Francis 2014-12-24 00:30:45 UTC
Without even having to compile this from source, I would say based on the log messages that the below is the commit of interest

Adding Cc: to vmiklos@collabora.co.uk. Could you possibly take a look at this one? Thanks


commit 321d7ec2071472b3765a00806715e7ad9f8a306f
Author: Miklos Vajna <vmiklos@collabora.co.uk>
Date:   Sat Sep 6 18:26:02 2014 +0200

    fdo#82078 RTF import: fix bold text spilling over to non-bold text
    
    Regression from commit 41890bf714803969515578b47e63fa9730ea7090
    (fdo#54473 fdo#57133 fix RTF import of character styles, 2012-12-04),
    the problem was that the style undoing magic introduced in
    1be0a3fa9ebb22b607c54b47739d4467acfed259 (n#825305: writerfilter RTF
    import: override style properties like Word, 2014-06-17) was not used
    for character styles.
    
    Change-Id: Id31cfd5574a83bcf2895f0c2fd496fa60791cbb3
Comment 6 Miklos Vajna 2015-05-15 08:18:00 UTC
I think current master has this problem due to commit 76c0d0abc89cd8948706083c2660b71a2dad670c (RTF import: adapt getProperties() to createStyleProperties(), 2014-09-07).

The problem is that the commit only made the *character* style sprms/attributes a flat list, but not the *paragraph* style ones. Fixing that inconsistency should avoid the tokenizer adding unwanted default sprms.
Comment 7 Commit Notification 2015-05-18 05:48:25 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cbe79789a0fc9b80b2fd14a5abfe0973a2cb69dc

tdf#86814 RTF import: fix sometimes lost bold style

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2015-06-03 11:03:05 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4c3afdb31382099005a16d2dd64a742c749f06ab&h=libreoffice-4-4

tdf#86814 RTF import: fix sometimes lost bold style

It will be available in 4.4.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Robinson Tryon (qubit) 2015-12-17 08:40:55 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]